JT-3083 - fix spacing on mobile

--- a/app/assets/stylesheets/components/_neighborhood.scss
+++ b/app/assets/stylesheets/components/_neighborhood.scss
@@ -107,7 +107,7 @@
           margin: 20px;
           @include media-breakpoint-down(xs) {
             margin: auto;
-            padding: 0 30px;
+            //padding: 0 30px;
             float: none;
           }
         }
